# prch

./: .gitignore  CMakeLists.txt  application.cpp  application.hpp  assets.qrc  main.cpp  prch.pro  projectdialog.cpp  projectdialog.hpp  projectdialog.ui  projectlistwidget.cpp  projectlistwidget.hpp
